commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/16/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 46b00eaf6ad978daee51ceed515b9d0625ec88cb
-ms.sourcegitcommit: e5a74f882c14eaa0e5639ff082355e130559ba83
+ms.openlocfilehash: 2feaa837af7f7a1afcd568dc98b3cdfb1af55276
+ms.sourcegitcommit: 04ce94b3c1b01d167f30eed60c1c95446dfe759d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/20/2019
-ms.locfileid: "71168313"
+ms.lasthandoff: 09/21/2019
+ms.locfileid: "71176514"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -188,6 +188,10 @@ ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de 
 
 * Prise en charge de la mise en `System.Net.HttpClient` forme et de la négociation du contenu pour-le package NuGet [Microsoft. Aspnet. WebApi. client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) `System.Net.HttpClient` offre `PostJsonAsync` une extensibilité utile avec les API telles que `ReadAsAsync`, etc.
 
+* Compilation du runtime Razor : la prise en charge de la compilation du runtime des vues et des pages Razor fait désormais partie de [Microsoft. AspNetCore. Mvc. Razor. RuntimeCompilation](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation).
+
+* Prise `Newtonsoft.Json` en charge MVC : la prise en `Newtonsoft.Json` charge de l’utilisation de MVC avec est désormais intégrée à [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
+
 ### <a name="analyzer-support"></a>Prise en charge de l’analyseur
 
 * Les projets qui `Microsoft.NET.Sdk.Web` ciblent implicitement des analyseurs de référence ont été fournis précédemment dans le cadre du package [Microsoft. AspNetCore. Mvc. Analysis](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Analyzers/) . Aucune référence supplémentaire n’est requise pour les activer.
@@ -336,7 +340,11 @@ Les applications et les bibliothèques qui ciblent ASP.NET Core 2,1 ou version u
 
 ## <a name="jsonnet-support"></a>Support Json.NET
 
-Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [JSON.net](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de la ASP.net Core Framework partagé. Votre application peut nécessiter cette référence si elle `Newtonsoft.Json`utilise des fonctionnalités spécifiques telles que les JsonPatch ou les convertisseurs ou si elle [met en forme](xref:web-api/advanced/formatting) `Newtonsoft.Json`des types spécifiques.
+Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [JSON.net](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de la ASP.net Core Framework partagé.
+
+La valeur par défaut pour ASP.NET Core est désormais [System. Text. JSON](/dotnet/api/system.text.json?view=netcore-3.0), qui est une nouveauté de .net Core 3,0. Envisagez d’utiliser dans `System.Text.Json` la mesure du possible. Elle est très performante et ne nécessite pas de dépendance de bibliothèque supplémentaire. Toutefois, étant `System.Text.Json` donné que est nouveau, il est possible qu’il manque actuellement des fonctionnalités dont votre application a besoin.
+
+`Netwtonsoft.Json` Votre application peut nécessiter une intégration si elle utilise `Newtonsoft.Json`des fonctionnalités spécifiques telles que les JsonPatch ou les convertisseurs ou si elle [met en forme](xref:web-api/advanced/formatting) `Newtonsoft.Json`des types spécifiques.
 
 Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 Signalr, consultez [basculer vers Newtonsoft. JSON](#switch-to-newtonsoftjson) dans ce document.
 
@@ -417,9 +425,11 @@ public void ConfigureServices(IServiceCollection services)
 
 Si une application appelle `UseMvc` ou `UseSignalR`, migrez l’application vers le [routage des points de terminaison](xref:fundamentals/routing) , si possible. Pour améliorer la compatibilité du routage des points de terminaison avec les versions précédentes de MVC, nous avons rétabli certaines des modifications apportées à la génération d’URL introduites dans ASP.NET Core 2,2. Si vous avez rencontré des problèmes lors de l’utilisation du routage de point de terminaison dans 2,2, attendez-vous à des améliorations de ASP.NET Core 3,0, avec les exceptions suivantes :
 
-* Si l’application implémente `IRouter` ou hérite de `Route`, vous souhaiterez peut-être éviter la migration à ce stade. Fournir des commentaires au [plan de la migration des implémentations basées sur IRouter sur le routage des points de terminaison](https://github.com/aspnet/AspNetCore/issues/4221).
+* Si l’application implémente `IRouter` ou hérite de `Route`, utilisez [DynamicRouteValuesTransformer](https://github.com/aspnet/AspNetCore.Docs/issues/12997) comme remplacement.
 
-* Si l’application accède `RouteData.Routers` directement à MVC, vous souhaiterez peut-être éviter la migration à ce stade. Fournissez des commentaires lors [de la migration pour l’utilisation de RouteData. routeurs](https://github.com/aspnet/AspNetCore/issues/9148).
+* Si l’application accède `RouteData.Routers` directement à MVC pour analyser des URL, vous pouvez la remplacer par l’utilisation de. `LinkParser.ParsePathByEndpointName` 
+ * Définissez l’itinéraire avec un nom d’itinéraire.
+ * Utilisez `LinkParser.ParsePathByEndpointName` et transmettez le nom de l’itinéraire souhaité.
 
 Le routage des points de terminaison prend en charge les mêmes syntaxe de modèle d' `IRouter`itinéraire et fonctionnalités de création de modèle de routage que. Le routage des `IRouteConstraint`points de terminaison prend en charge. Le routage des `[Route]`points `[HttpGet]`de terminaison prend en charge, et les autres attributs de routage Mvc.
 
