commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/16/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 2feaa837af7f7a1afcd568dc98b3cdfb1af55276
-ms.sourcegitcommit: 04ce94b3c1b01d167f30eed60c1c95446dfe759d
+ms.openlocfilehash: 1318d97fedb3f77ba0a1a153383207914448bb96
+ms.sourcegitcommit: fa61d882be9d0c48bd681f2efcb97e05522051d0
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/21/2019
-ms.locfileid: "71176514"
+ms.lasthandoff: 09/23/2019
+ms.locfileid: "71205737"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -211,11 +211,11 @@ ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de 
 
 ### <a name="razor-class-library"></a>Bibliothèque de classes Razor
 
-Les projets de bibliothèque de classes Razor qui fournissent des composants d’interface `RazorLangVersion` utilisateur pour MVC doivent définir la propriété dans le fichier projet.
+Les projets de bibliothèque de classes Razor qui fournissent des composants d’interface `AddRazorSupportForMvc` utilisateur pour MVC doivent définir la propriété dans le fichier projet :
 
 ```xml
 <PropertyGroup>
-  <RazorLangVersion>3.0</RazorLangVersion>
+  <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
 </PropertyGroup>
 ```
 
@@ -313,7 +313,7 @@ Pour plus d’informations, consultez [put Request queues in a distinct collecti
 
 ### <a name="allowsynchronousio-disabled"></a>AllowSynchronousIO désactivé
 
-`AllowSynchronousIO`active ou désactive les API d’e/s synchrones `HttpReqeuest.Body.Read`, `HttpResponse.Body.Write`telles que `Stream.Flush`, et. Ces API sont une source de privation de thread conduisant à des blocages d’application. Dans 3,0, `AllowSynchronousIO` est désactivé par défaut. Pour plus d’informations, consultez [la section e/s synchrone dans l’article Kestrel](/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.0#synchronous-io).
+`AllowSynchronousIO`active ou désactive les API d’e/s synchrones `HttpRequest.Body.Read`, `HttpResponse.Body.Write`telles que `Stream.Flush`, et. Ces API sont une source de privation de thread conduisant à des blocages d’application. Dans 3,0, `AllowSynchronousIO` est désactivé par défaut. Pour plus d’informations, consultez [la section e/s synchrone dans l’article Kestrel](/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.0#synchronous-io).
 
 Outre l’activation `AllowSynchronousIO` des options `ConfigureKestrel`de avec, les e/s synchrones peuvent également être remplacées par demande comme une atténuation temporaire :
 
