commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 09/16/2019
+ms.date: 09/24/2019
 uid: migration/22-to-30
-ms.openlocfilehash: b1cce90f587265bfba67dcee6a7a45bb3a01f8ec
-ms.sourcegitcommit: 79eeb17604b536e8f34641d1e6b697fb9a2ee21f
+ms.openlocfilehash: 57df37322d2aadad5a48345158aef26cde0edda3
+ms.sourcegitcommit: 8a36be1bfee02eba3b07b7a86085ec25c38bae6b
 ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 09/24/2019
-ms.locfileid: "71211676"
+ms.locfileid: "71219146"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -141,7 +141,7 @@ Les fonctionnalités de ASP.net core qui étaient disponibles via l’un des pac
 Aucune référence supplémentaire n’est requise pour ces projets :
 
 ```xml
-<Project SDK="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
@@ -152,7 +152,7 @@ Aucune référence supplémentaire n’est requise pour ces projets :
 * Les projets qui `Microsoft.NET.Sdk` ciblent ou `Microsoft.NET.Sdk.Razor` le kit de développement `FrameworkReference` logiciel `Microsoft.AspNetCore.App`(SDK) doivent ajouter un explicite à :
 
 ```xml
-<Project SDK="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
@@ -199,7 +199,7 @@ ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de 
 * Si votre application utilise des [analyseurs d’API](xref:web-api/advanced/analyzers) livrés précédemment à l’aide du package [Microsoft. AspNetCore. Mvc. API. Analyzers](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Api.Analyzers/) , modifiez votre fichier projet pour référencer les analyseurs fournis dans le cadre du kit de développement logiciel (SDK) Web .net Core :
 
 ```xml
-<Project SDK="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
@@ -952,7 +952,7 @@ Les bibliothèques doivent souvent prendre en charge plusieurs versions de ASP.N
 Par exemple :
 
 ```xml
-<Project SDK="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
