commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/24/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 57df37322d2aadad5a48345158aef26cde0edda3
-ms.sourcegitcommit: 8a36be1bfee02eba3b07b7a86085ec25c38bae6b
+ms.openlocfilehash: fc52798b05c1e7f11391bba5ac444298ce4287d9
+ms.sourcegitcommit: e54672f5c493258dc449fac5b98faf47eb123b28
 ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 09/24/2019
-ms.locfileid: "71219146"
+ms.locfileid: "71248374"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -168,29 +168,31 @@ Aucune référence supplémentaire n’est requise pour ces projets :
 
 ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de la `Microsoft.AspNetCore.App` référence du package. Pour continuer à utiliser les fonctionnalités fournies par ces assemblys, référencez les versions 3,0 des packages correspondants :
 
-* Entity Framework Core-consultez https://docs.microsoft.com/ef/core/providers/index pour plus d’informations sur le référencement du package spécifique au fournisseur de base de données.
+* Entity Framework Core &ndash; consultez https://docs.microsoft.com/ef/core/providers/index pour plus d’informations sur le référencement du package spécifique au fournisseur de base de données.
 
-* La prise en charge de l’interface utilisateur des identités pour l' [interface utilisateur d’identité](xref:security/authentication/identity) peut être ajoutée en référençant le package [Microsoft. AspNetCore. Identity. UI](https://www.nuget.org/packages/Microsoft.AspNetCore.Identity.UI) .
+* Interface utilisateur d’identité
+
+  La prise en charge de l' [interface utilisateur d’identité](xref:security/authentication/identity) peut être ajoutée en référençant le package [Microsoft. AspNetCore. Identity. UI](https://www.nuget.org/packages/Microsoft.AspNetCore.Identity.UI) .
 
 * Services SPA
-    * [Microsoft. AspNetCore. SpaServices](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices)
-    * [Microsoft. AspNetCore. SpaServices. extensions](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices.Extensions)
+  * [Microsoft. AspNetCore. SpaServices](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices)
+  * [Microsoft. AspNetCore. SpaServices. extensions](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices.Extensions)
 
-* Authentification : la prise en charge des flux d’authentification tiers est disponible sous forme de packages NuGet :
+* La &ndash; prise en charge de l’authentification pour les flux d’authentification tiers est disponible sous forme de packages NuGet :
 
-    * [OAuth Facebook](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Facebook)
-    * [Google OAuth](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Google)
-    * [Jeton du porteur OpenID Connect](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.JwtBearer)
-    * [Authentification du compte Microsoft](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.MicrosoftAccount)
-    * [Authentification OpenID Connect](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.OpenIdConnect)
-    * [OAuth Twitter](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Twitter)
-    * [Authentification WsFederation](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.WsFederation)
+  * OAuth Facebook ([Microsoft. AspNetCore. Authentication. Facebook](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Facebook))
+  * Google OAuth ([Microsoft. AspNetCore. Authentication. Google](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Google))
+  * Jeton du porteur OpenID Connect ([Microsoft. AspNetCore. Authentication. JwtBearer](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.JwtBearer))
+  * Authentification de compte Microsoft ([Microsoft. AspNetCore. Authentication. MicrosoftAccount](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.MicrosoftAccount))
+  * Authentification OpenID Connect ([Microsoft. AspNetCore. Authentication. OpenIdConnect](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.OpenIdConnect))
+  * Twitter OAuth ([Microsoft. AspNetCore. Authentication. Twitter](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Twitter))
+  * Authentification WsFederation ([Microsoft. AspNetCore. Authentication. WsFederation](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.WsFederation))
 
-* Prise en charge de la mise en `System.Net.HttpClient` forme et de la négociation du contenu pour-le package NuGet [Microsoft. Aspnet. WebApi. client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) `System.Net.HttpClient` offre `PostJsonAsync` une extensibilité utile avec les API telles que `ReadAsAsync`, etc.
+* La prise en charge de la mise `System.Net.HttpClient` en forme et de la négociation du contenu pour &ndash; le package NuGet [Microsoft. Aspnet. WebApi. client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) offre une extensibilité `System.Net.HttpClient` utile avec les API telles que `ReadAsAsync`, `PostJsonAsync` etc.
 
-* Compilation du runtime Razor : la prise en charge de la compilation du runtime des vues et des pages Razor fait désormais partie de [Microsoft. AspNetCore. Mvc. Razor. RuntimeCompilation](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation).
+* La prise en &ndash; charge de la compilation du runtime Razor pour la compilation du runtime des vues et des pages Razor fait désormais partie de [Microsoft. AspNetCore. Mvc. Razor. RuntimeCompilation](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation).
 
-* Prise `Newtonsoft.Json` en charge MVC : la prise en `Newtonsoft.Json` charge de l’utilisation de MVC avec est désormais intégrée à [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson).
+* La prise en charge de MVC `Newtonsoft.Json` pour l’utilisation de MVC avec `Newtonsoft.Json` est désormais intégrée à [Microsoft. AspNetCore. Mvc. NewtonsoftJson](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson). &ndash;
 
 ### <a name="analyzer-support"></a>Prise en charge de l’analyseur
 
