--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -55,81 +55,81 @@ ASP.NET Core ne produit plus un grand nombre de fonctionnalités de packages NuG
     * Microsoft.AspNetCore
     * Microsoft.AspNetCore.All
     * Microsoft.AspNetCore.App
-    * Microsoft. AspNetCore. anti-contrefaçon
-    * Microsoft. AspNetCore. Authentication
-    * Microsoft. AspNetCore. Authentication. Abstracts
-    * Microsoft. AspNetCore. Authentication. Cookies
-    * Microsoft. AspNetCore. Authentication. Core
-    * Microsoft. AspNetCore. Authentication. JwtBearer
-    * Microsoft. AspNetCore. Authentication. OAuth
-    * Microsoft. AspNetCore. Authentication. OpenIdConnect
-    * Microsoft. AspNetCore. Authorization
-    * Microsoft. AspNetCore. Authorization. Policy
-    * Microsoft. AspNetCore. CookiePolicy
-    * Microsoft. AspNetCore. cors
-    * Microsoft. AspNetCore. Cryptography. Internal
-    * Microsoft. AspNetCore. Cryptography. keydérivation
+    * Microsoft.AspNetCore.Antiforgery
+    * Microsoft.AspNetCore.Authentication
+    * Microsoft.AspNetCore.Authentication.Abstractions
+    * Microsoft.AspNetCore.Authentication.Cookies
+    * Microsoft.AspNetCore.Authentication.Core
+    * Microsoft.AspNetCore.Authentication.JwtBearer
+    * Microsoft.AspNetCore.Authentication.OAuth
+    * Microsoft.AspNetCore.Authentication.OpenIdConnect
+    * Microsoft.AspNetCore.Authorization
+    * Microsoft.AspNetCore.Authorization.Policy
+    * Microsoft.AspNetCore.CookiePolicy
+    * Microsoft.AspNetCore.Cors
+    * Microsoft.AspNetCore.Cryptography.Internal
+    * Microsoft.AspNetCore.Cryptography.KeyDerivation
     * Microsoft.AspNetCore.DataProtection
-    * Microsoft. AspNetCore. DataProtection. Abstracts
-    * Microsoft. AspNetCore. DataProtection. extensions
-    * Microsoft. AspNetCore. Diagnostics
-    * Microsoft. AspNetCore. Diagnostics. HealthChecks
+    * Microsoft.AspNetCore.DataProtection.Abstractions
+    * Microsoft.AspNetCore.DataProtection.Extensions
+    * Microsoft.AspNetCore.Diagnostics
+    * Microsoft.AspNetCore.Diagnostics.HealthChecks
     * Microsoft.AspNetCore.HostFiltering
     * Microsoft.AspNetCore.Hosting
-    * Microsoft. AspNetCore. Hosting. Abstracts
-    * Microsoft. AspNetCore. Hosting. Server. Abstracts
-    * Microsoft. AspNetCore. http
-    * Microsoft. AspNetCore. http. Abstracts
-    * Microsoft. AspNetCore. http. Connections
-    * Microsoft. AspNetCore. http. extensions
-    * Microsoft. AspNetCore. http. Features
-    * Microsoft. AspNetCore. HttpOverrides
-    * Microsoft. AspNetCore. HttpsPolicy
-    * Microsoft. AspNetCore. Identity
-    * Microsoft. AspNetCore. Localization
-    * Microsoft. AspNetCore. Localization. Routing
-    * Microsoft. AspNetCore. MiddlewareAnalysis
+    * Microsoft.AspNetCore.Hosting.Abstractions
+    * Microsoft.AspNetCore.Hosting.Server.Abstractions
+    * Microsoft.AspNetCore.Http
+    * Microsoft.AspNetCore.Http.Abstractions
+    * Microsoft.AspNetCore.Http.Connections
+    * Microsoft.AspNetCore.Http.Extensions
+    * Microsoft.AspNetCore.Http.Features
+    * Microsoft.AspNetCore.HttpOverrides
+    * Microsoft.AspNetCore.HttpsPolicy
+    * Microsoft.AspNetCore.Identity
+    * Microsoft.AspNetCore.Localization
+    * Microsoft.AspNetCore.Localization.Routing
+    * Microsoft.AspNetCore.MiddlewareAnalysis
     * Microsoft.AspNetCore.Mvc
-    * Microsoft. AspNetCore. Mvc. Abstracts
-    * Microsoft. AspNetCore. Mvc. Analysis
-    * Microsoft. AspNetCore. Mvc. ApiExplorer
-    * Microsoft. AspNetCore. Mvc. API. Analysis
-    * Microsoft. AspNetCore. Mvc. Core
-    * Microsoft. AspNetCore. Mvc. cors
-    * Microsoft. AspNetCore. Mvc. DataAnnotations
-    * Microsoft. AspNetCore. Mvc. Formatters. JSON
-    * Microsoft. AspNetCore. Mvc. Formatters. Xml
-    * Microsoft. AspNetCore. Mvc. Localization
+    * Microsoft.AspNetCore.Mvc.Abstractions
+    * Microsoft.AspNetCore.Mvc.Analyzers
+    * Microsoft.AspNetCore.Mvc.ApiExplorer
+    * Microsoft.AspNetCore.Mvc.Api.Analyzers
+    * Microsoft.AspNetCore.Mvc.Core
+    * Microsoft.AspNetCore.Mvc.Cors
+    * Microsoft.AspNetCore.Mvc.DataAnnotations
+    * Microsoft.AspNetCore.Mvc.Formatters.Json
+    * Microsoft.AspNetCore.Mvc.Formatters.Xml
+    * Microsoft.AspNetCore.Mvc.Localization
     * Microsoft.AspNetCore.Mvc.Razor
-    * Microsoft. AspNetCore. Mvc. Razor. extensions
-    * Microsoft. AspNetCore. Mvc. Razor. ViewCompilation
-    * Microsoft. AspNetCore. Mvc. RazorPages
-    * Microsoft. AspNetCore. Mvc. TagHelpers
-    * Microsoft. AspNetCore. Mvc. ViewFeatures
-    * Microsoft. AspNetCore. Razor
-    * Microsoft. AspNetCore. Razor. Runtime
-    * Microsoft. AspNetCore. Razor. Design
-    * Microsoft. AspNetCore. ResponseCaching
-    * Microsoft. AspNetCore. ResponseCaching. Abstracts
-    * Microsoft. AspNetCore. ResponseCompression
-    * Microsoft. AspNetCore. réécriture
+    * Microsoft.AspNetCore.Mvc.Razor.Extensions
+    * Microsoft.AspNetCore.Mvc.Razor.ViewCompilation
+    * Microsoft.AspNetCore.Mvc.RazorPages
+    * Microsoft.AspNetCore.Mvc.TagHelpers
+    * Microsoft.AspNetCore.Mvc.ViewFeatures
+    * Microsoft.AspNetCore.Razor
+    * Microsoft.AspNetCore.Razor.Runtime
+    * Microsoft.AspNetCore.Razor.Design
+    * Microsoft.AspNetCore.ResponseCaching
+    * Microsoft.AspNetCore.ResponseCaching.Abstractions
+    * Microsoft.AspNetCore.ResponseCompression
+    * Microsoft.AspNetCore.Rewrite
     * Microsoft.AspNetCore.Routing
-    * Microsoft. AspNetCore. Routing. Abstracts
-    * Microsoft. AspNetCore. Server. HttpSys
-    * Microsoft. AspNetCore. Server. IIS
-    * Microsoft. AspNetCore. Server. IISIntegration
-    * Microsoft. AspNetCore. Server. Kestrel
-    * Microsoft. AspNetCore. Server. Kestrel. Core
-    * Microsoft. AspNetCore. Server. Kestrel. https
-    * Microsoft. AspNetCore. Server. Kestrel. transport. Abstracts
-    * Microsoft. AspNetCore. Server. Kestrel. transport. Sockets
-    * Microsoft. AspNetCore. session
-    * Microsoft. AspNetCore. Signalr
-    * Microsoft. AspNetCore. Signalr. Core
+    * Microsoft.AspNetCore.Routing.Abstractions
+    * Microsoft.AspNetCore.Server.HttpSys
+    * Microsoft.AspNetCore.Server.IIS
+    * Microsoft.AspNetCore.Server.IISIntegration
+    * Microsoft.AspNetCore.Server.Kestrel
+    * Microsoft.AspNetCore.Server.Kestrel.Core
+    * Microsoft.AspNetCore.Server.Kestrel.Https
+    * Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions
+    * Microsoft.AspNetCore.Server.Kestrel.Transport.Sockets
+    * Microsoft.AspNetCore.Session
+    * Microsoft.AspNetCore.SignalR
+    * Microsoft.AspNetCore.SignalR.Core
     * Microsoft.AspNetCore.StaticFiles
-    * Microsoft. AspNetCore. WebSockets
-    * Microsoft. AspNetCore. WebUtilities
-    * Microsoft.Net. http. en-têtes</details>
+    * Microsoft.AspNetCore.WebSockets
+    * Microsoft.AspNetCore.WebUtilities
+    * Microsoft.Net.Http.Headers </details>
 
 ### <a name="framework-reference"></a>Référence du Framework
 
