commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 09/24/2019
+ms.date: 09/25/2019
 uid: migration/22-to-30
-ms.openlocfilehash: b02852e73ab6eca6776c0583d50bcaf29845ee5c
-ms.sourcegitcommit: a7813a776809a5029c94aa503ee71994f156231f
+ms.openlocfilehash: 8cb494ecedbe1b8e224aefcf49900867bab6afc5
+ms.sourcegitcommit: 994da92edb0abf856b1655c18880028b15a28897
 ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 09/25/2019
-ms.locfileid: "71267672"
+ms.locfileid: "71278713"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -348,7 +348,7 @@ Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](h
 
 La valeur par défaut pour ASP.NET Core est désormais [System. Text. JSON](/dotnet/api/system.text.json?view=netcore-3.0), qui est une nouveauté de .net Core 3,0. Envisagez d’utiliser dans `System.Text.Json` la mesure du possible. Elle est très performante et ne nécessite pas de dépendance de bibliothèque supplémentaire. Toutefois, étant `System.Text.Json` donné que est nouveau, il est possible qu’il manque actuellement des fonctionnalités dont votre application a besoin.
 
-`Netwtonsoft.Json` Votre application peut nécessiter une intégration si elle utilise `Newtonsoft.Json`des fonctionnalités spécifiques telles que les JsonPatch ou les convertisseurs ou si elle [met en forme](xref:web-api/advanced/formatting) `Newtonsoft.Json`des types spécifiques.
+`Newtonsoft.Json` Votre application peut nécessiter une intégration si elle utilise `Newtonsoft.Json`des fonctionnalités spécifiques telles que les JsonPatch ou les convertisseurs ou si elle [met en forme](xref:web-api/advanced/formatting) `Newtonsoft.Json`des types spécifiques.
 
 Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 Signalr, consultez [basculer vers Newtonsoft. JSON](#switch-to-newtonsoftjson) dans ce document.
 
