--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/25/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 8cb494ecedbe1b8e224aefcf49900867bab6afc5
-ms.sourcegitcommit: 994da92edb0abf856b1655c18880028b15a28897
-ms.translationtype: MT
+ms.openlocfilehash: 7aa42269c0482002a97789842b00d6533f995d8e
+ms.sourcegitcommit: 14b25156e34c82ed0495b4aff5776ac5b1950b5e
+ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/25/2019
-ms.locfileid: "71278713"
+ms.lasthandoff: 09/26/2019
+ms.locfileid: "71301203"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -137,7 +137,6 @@ ASP.NET Core ne produit plus un grand nombre de fonctionnalités de packages NuG
 
 Les fonctionnalités de ASP.net core qui étaient disponibles via l’un des packages répertoriés ci-dessus sont disponibles `Microsoft.AspNetCore.App` dans le cadre de l’infrastructure partagée. L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et qui comprend un composant d’exécution et un pack de ciblage. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
-
 * Les projets qui ciblent le `Microsoft.NET.Sdk.Web` Kit de développement logiciel (SDK) référencent implicitement le `Microsoft.AspNetCore.App` Framework.
 
 Aucune référence supplémentaire n’est requise pour ces projets :
@@ -165,6 +164,37 @@ Aucune référence supplémentaire n’est requise pour ces projets :
     ...
 </Project>
 ```
+
+#### <a name="framework-dependent-builds-using-docker"></a>Builds dépendantes de Framework à l’aide de Dockr
+
+Les builds dépendantes de l’infrastructure des applications console qui utilisent un package qui dépend de l' [infrastructure partagée](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) ASP.net Core peuvent fournir l’erreur d’exécution suivante :
+
+```cli
+It was not possible to find any compatible framework version
+The specified framework 'Microsoft.AspNetCore.App', version '3.0.0' was not found.
+  - No frameworks were found.
+```
+
+`Microsoft.AspNetCore.App`est le Framework partagé contenant le runtime ASP.NET Core et est uniquement présent sur l’image de l’ancrage [dotnet/Core/ASPNET](https://hub.docker.com/_/microsoft-dotnet-core-aspnet/) .  Le kit de développement logiciel (SDK) 3,0 réduit la taille des builds dépendantes de l’infrastructure à l’aide de asp.net core en n’incluant pas de copies en double des bibliothèques disponibles dans le Framework partagé.  Il s’agit d’une économie potentielle allant jusqu’à ~ 18MB, mais elle nécessite que le runtime ASP.NET Core soit présent/installé pour exécuter l’application.
+
+Pour déterminer si l’application a une dépendance (directe ou indirecte) sur le ASP.NET Core Framework partagé, examinez le fichier *runtimeconfig. JSON* généré pendant une génération/publication de votre application. Le fichier JSON suivant illustre une dépendance sur le ASP.NET Core Framework partagé :
+
+```JSON
+{
+  "runtimeOptions": {
+    "tfm": "netcoreapp3.0",
+    "framework": {
+      "name": "Microsoft.AspNetCore.App",
+      "version": "3.0.0"
+    },
+    "configProperties": {
+      "System.GC.Server": true
+    }
+  }
+}
+```
+
+Si votre application utilise la station d’accueil, utilisez une image de base qui comprend ASP.NET Core 3,0. Par exemple, `docker pull mcr.microsoft.com/dotnet/core/aspnet:3.0`.
 
 ### <a name="add-package-references-for-removed-assemblies"></a>Ajouter des références de package pour les assemblys supprimés
 
