commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/25/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 7aa42269c0482002a97789842b00d6533f995d8e
-ms.sourcegitcommit: 14b25156e34c82ed0495b4aff5776ac5b1950b5e
-ms.translationtype: HT
+ms.openlocfilehash: 630066f8745bbc3de145f2c8c1b97ea0853fbe66
+ms.sourcegitcommit: cf9ffcce4fe0b69fe795aae9ae06e99fdb18bdfc
+ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 09/26/2019
-ms.locfileid: "71301203"
+ms.locfileid: "71306653"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -475,7 +475,26 @@ Conseils généraux :
 
 * Ajoutez `UseRouting`.
 * Si l’application appelle `UseStaticFiles`, placez `UseStaticFiles` -la **avant** `UseRouting`.
-* Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization` appel à et **après** `UseRouting` (et **après** `UseCors` l’utilisation de l’intergiciel (middleware) cors).
+* Si l’application utilise des fonctionnalités d’authentification/d' `AuthorizePage` autorisation `[Authorize]`telles que ou, placez `UseAuthentication` l' `UseAuthorization`appel à et `UseRouting` : `UseCors` **après**, et `UseEndpoints`, mais avant :
+
+  ```csharp
+  public void Configure(IApplicationBuilder app)
+  {
+    ...
+
+    app.UseStaticFiles();
+
+    app.UseRouting();
+    app.UseCors();
+
+    app.UseAuthentication();
+    app.UseAuthorization();
+
+    app.UseEndpoints(endpoints => {
+       endpoints.MapControllers();
+    }
+  ```
+
 * Remplacez `UseMvc` ou `UseSignalR` par .`UseEndpoints`
 * Si l’application utilise des scénarios [cors](xref:security/cors) , tels `[EnableCors]`que, placez l’appel `UseCors` à avant tout autre intergiciel qui utilise cors (par exemple, placez `UseCors` avant `UseAuthentication`, `UseAuthorization`et `UseEndpoints`).
 * Remplacez `IHostingEnvironment` `using` <xref:Microsoft.Extensions.Hosting?displayProperty=fullName> par `IWebHostEnvironment` et ajoutez une instruction pour l’espace de noms.
