commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/25/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 630066f8745bbc3de145f2c8c1b97ea0853fbe66
-ms.sourcegitcommit: cf9ffcce4fe0b69fe795aae9ae06e99fdb18bdfc
+ms.openlocfilehash: 5d0feebfd0ad3bdb1f46393d43c90c0d623e01af
+ms.sourcegitcommit: e644258c95dd50a82284f107b9bf3becbc43b2b2
 ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 09/26/2019
-ms.locfileid: "71306653"
+ms.locfileid: "71317635"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -232,16 +232,16 @@ ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de 
 
 * Si votre application utilise des [analyseurs d’API](xref:web-api/advanced/analyzers) livrés précédemment à l’aide du package [Microsoft. AspNetCore. Mvc. API. Analyzers](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Api.Analyzers/) , modifiez votre fichier projet pour référencer les analyseurs fournis dans le cadre du kit de développement logiciel (SDK) Web .net Core :
 
-```xml
-<Project Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
-  </PropertyGroup>
-
-  ...
-</Project>
-```
+    ```xml
+    <Project Sdk="Microsoft.NET.Sdk.Web">
+      <PropertyGroup>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+      </PropertyGroup>
+    
+      ...
+    </Project>
+    ```
 
 ### <a name="razor-class-library"></a>Bibliothèque de classes Razor
 
@@ -605,7 +605,7 @@ public class MyController : ControllerBase
 }
 ```
 
-#### <a name="authorization"></a>Autorisation
+#### <a name="authorization"></a>Authorization
 
 Dans les versions antérieures de ASP.net Core, la prise en charge de `[Authorize]` l’autorisation a été fournie via l’attribut. L’intergiciel d’autorisation n’est pas disponible. Dans ASP.NET Core 3,0, l’intergiciel (middleware) d’autorisation est requis. Nous vous recommandons de placer le ASP.net Core middleware d'`UseAuthorization`autorisation () `UseAuthentication`immédiatement après. L’intergiciel d’autorisation peut également être configuré avec une stratégie par défaut, qui peut être remplacée.
 
@@ -1002,7 +1002,7 @@ Les bibliothèques doivent souvent prendre en charge plusieurs versions de ASP.N
 * La bibliothèque s’appuie sur une fonctionnalité qui a une [modification avec rupture](#breaking-api-changes)binaire.
 * La bibliothèque veut tirer parti des nouvelles fonctionnalités de ASP.NET Core 3,0. 
 
-Par exemple :
+Exemple :
 
 ```xml
 <Project Sdk="Microsoft.NET.Sdk">
