commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/25/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 5d0feebfd0ad3bdb1f46393d43c90c0d623e01af
-ms.sourcegitcommit: e644258c95dd50a82284f107b9bf3becbc43b2b2
+ms.openlocfilehash: 1babb0920e5b44de16003e895755f680eae02807
+ms.sourcegitcommit: fe3e556bf438fc4136fcf0bac61cf96e3e91caf5
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/26/2019
-ms.locfileid: "71317635"
+ms.lasthandoff: 09/27/2019
+ms.locfileid: "71341438"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -165,11 +165,11 @@ Aucune référence supplémentaire n’est requise pour ces projets :
 </Project>
 ```
 
-#### <a name="framework-dependent-builds-using-docker"></a>Builds dépendantes de Framework à l’aide de Dockr
+#### <a name="framework-dependent-builds-using-docker"></a>Builds dépendantes du Framework utilisant l’ancrage
 
-Les builds dépendantes de l’infrastructure des applications console qui utilisent un package qui dépend de l' [infrastructure partagée](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) ASP.net Core peuvent fournir l’erreur d’exécution suivante :
+Les builds dépendantes du Framework des applications console qui utilisent un package qui dépend de l' [infrastructure partagée](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) ASP.net Core peuvent fournir l’erreur d’exécution suivante :
 
-```cli
+```console
 It was not possible to find any compatible framework version
 The specified framework 'Microsoft.AspNetCore.App', version '3.0.0' was not found.
   - No frameworks were found.
@@ -179,7 +179,7 @@ The specified framework 'Microsoft.AspNetCore.App', version '3.0.0' was not foun
 
 Pour déterminer si l’application a une dépendance (directe ou indirecte) sur le ASP.NET Core Framework partagé, examinez le fichier *runtimeconfig. JSON* généré pendant une génération/publication de votre application. Le fichier JSON suivant illustre une dépendance sur le ASP.NET Core Framework partagé :
 
-```JSON
+```json
 {
   "runtimeOptions": {
     "tfm": "netcoreapp3.0",
@@ -228,20 +228,20 @@ ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de 
 
 ### <a name="analyzer-support"></a>Prise en charge de l’analyseur
 
-* Les projets qui `Microsoft.NET.Sdk.Web` ciblent implicitement des analyseurs de référence ont été fournis précédemment dans le cadre du package [Microsoft. AspNetCore. Mvc. Analysis](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Analyzers/) . Aucune référence supplémentaire n’est requise pour les activer.
+Les projets qui `Microsoft.NET.Sdk.Web` ciblent implicitement des analyseurs de référence ont été fournis précédemment dans le cadre du package [Microsoft. AspNetCore. Mvc. Analysis](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Analyzers/) . Aucune référence supplémentaire n’est requise pour les activer.
 
-* Si votre application utilise des [analyseurs d’API](xref:web-api/advanced/analyzers) livrés précédemment à l’aide du package [Microsoft. AspNetCore. Mvc. API. Analyzers](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Api.Analyzers/) , modifiez votre fichier projet pour référencer les analyseurs fournis dans le cadre du kit de développement logiciel (SDK) Web .net Core :
+Si votre application utilise des [analyseurs d’API](xref:web-api/advanced/analyzers) livrés précédemment à l’aide du package [Microsoft. AspNetCore. Mvc. API. Analyzers](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Api.Analyzers/) , modifiez votre fichier projet pour référencer les analyseurs fournis dans le cadre du kit de développement logiciel (SDK) Web .net Core :
 
-    ```xml
-    <Project Sdk="Microsoft.NET.Sdk.Web">
-      <PropertyGroup>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
-        <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
-      </PropertyGroup>
-    
-      ...
-    </Project>
-    ```
+```xml
+<Project Sdk="Microsoft.NET.Sdk.Web">
+    <PropertyGroup>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+    </PropertyGroup>
+
+    ...
+</Project>
+```
 
 ### <a name="razor-class-library"></a>Bibliothèque de classes Razor
 
@@ -839,6 +839,46 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
+#### <a name="async-suffix-removal-from-controller-action-names"></a>Suppression du suffixe Async des noms d’action du contrôleur
+
+Dans ASP.NET Core 3,0, ASP.NET Core MVC supprime le suffixe `Async` des noms d’action du contrôleur. Le routage et la génération de liens sont affectés par cette nouvelle valeur par défaut. Exemple :
+
+```csharp
+public class ProductsController : Controller
+{
+    public async Task<IActionResult> ListAsync()
+    {
+        var model = await _dbContext.Products.ToListAsync();
+        return View(model);
+    }
+}
+```
+
+Avant ASP.NET Core 3,0 :
+
+* L’action précédente est accessible à l’itinéraire *Products/ListAsync* .
+* Génération de lien requise spécifiant le suffixe `Async`. Exemple :
+
+    ```cshtml
+    <a asp-controller="Products" asp-action="ListAsync">List</a>
+    ```
+
+Dans ASP.NET Core 3,0 :
+
+* L’action précédente est accessible à l’itinéraire *Products/List* .
+* La génération de liens ne nécessite pas la spécification du suffixe `Async`. Exemple :
+
+    ```cshtml
+    <a asp-controller="Products" asp-action="List">List</a>
+    ```
+
+Cette modification n’affecte pas les noms spécifiés à l’aide de l’attribut [[ActionName]](/dotnet/api/microsoft.aspnetcore.mvc.actionnameattribute) . Le comportement par défaut peut être désactivé avec le code suivant dans `Startup.ConfigureServices` :
+
+```csharp
+services.AddMvc(options =>
+    options.SuppressAsyncSuffixInActionNames = false);
+```
+
 ### <a name="razor-pages"></a>Pages Razor
 
 Le mappage de Razor Pages a maintenant `UseEndpoints`lieu à l’intérieur de.
@@ -995,7 +1035,7 @@ Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas `Syst
 
 Dans 3,0, la compilation du runtime est un scénario d’abonnement. Pour activer la compilation au moment <xref:mvc/views/view-compilation#runtime-compilation>de l’exécution, consultez.
 
-## <a name="migrating-libraries-via-multi-targeting"></a>Migration de bibliothèques via le multi-ciblage
+## <a name="migrate-libraries-via-multi-targeting"></a>Migrer des bibliothèques via le multi-ciblage
 
 Les bibliothèques doivent souvent prendre en charge plusieurs versions de ASP.NET Core. La plupart des bibliothèques qui ont été compilées avec des versions antérieures de ASP.NET Core doivent continuer à fonctionner sans problème. Les conditions suivantes nécessitent la compilation croisée de l’application :
 
@@ -1043,6 +1083,6 @@ var webRootFileProvider =
 
 Nous espérons que ce rendez-vous disponible prochainement. Tant que ASP.NET Core 3,0 n’est pas disponible sur Azure App Service, suivez les instructions de la procédure [déployer ASP.net core version préliminaire dans Azure App service](xref:host-and-deploy/azure-apps/index#deploy-aspnet-core-preview-release-to-azure-app-service).
 
-## <a name="mysqldataentityframeworkcore-currently-not-supported-on-aspnet-core-30"></a>MySql. Data. EntityFrameworkCore actuellement non pris en charge sur ASP.NET Core 3,0
+## <a name="mysqldataentityframeworkcore-not-currently-supported-on-aspnet-core-30"></a>MySql. Data. EntityFrameworkCore n’est actuellement pas pris en charge sur ASP.NET Core 3,0
 
 Pour plus d’informations, consultez [ce problème GitHub](https://github.com/aspnet/EntityFrameworkCore/issues/17788).
