commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 09/25/2019
+ms.date: 09/29/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 98d9d59a35e05a4539da9e517c4a447014d33a94
-ms.sourcegitcommit: 5d25a7f22c50ca6fdd0f8ecd8e525822e1b35b7a
+ms.openlocfilehash: 4259c11e1e186ea7488d53e326821de255aa2458
+ms.sourcegitcommit: fe88748b762525cb490f7e39089a4760f6a73a24
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/28/2019
-ms.locfileid: "71551721"
+ms.lasthandoff: 09/30/2019
+ms.locfileid: "71691193"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -200,13 +200,16 @@ Si votre application utilise la station d’accueil, utilisez une image de base 
 
 ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de la `Microsoft.AspNetCore.App` référence du package. Pour continuer à utiliser les fonctionnalités fournies par ces assemblys, référencez les versions 3,0 des packages correspondants :
 
-* Entity Framework Core &ndash; pour plus d’informations sur le référencement du package spécifique au fournisseur de base de données, consultez [fournisseurs de bases de données](/ef/core/providers/index).
+* [Microsoft. EntityFrameworkCore](https://www.nuget.org/packages/Microsoft.EntityFrameworkCore)
+
+  Pour plus d’informations sur le référencement du package spécifique au fournisseur de base de données, consultez [fournisseurs de bases de données](/ef/core/providers/index).
 
 * Interface utilisateur d’identité
 
   La prise en charge de l' [interface utilisateur d’identité](xref:security/authentication/identity) peut être ajoutée en référençant le package [Microsoft. AspNetCore. Identity. UI](https://www.nuget.org/packages/Microsoft.AspNetCore.Identity.UI) .
 
 * Services SPA
+
   * [Microsoft. AspNetCore. SpaServices](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices)
   * [Microsoft. AspNetCore. SpaServices. extensions](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices.Extensions)
 
